--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.4.6",
     "@tailwindcss/typography": "^0.5.16",
+    "dotenv": "^17.2.1",
     "gray-matter": "^4.0.3",
     "jsdom": "^26.1.0",
     "marked": "^16.1.2",
